--- a/pkg/core/tsconfig.json
+++ b/pkg/core/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "commonjs",
     "declaration": true,
     "esModuleInterop": true,
-    "outDir": "dist",
+    "outDir": "dist"
   },
   "include": [
     "src/**/*"
