Start working on JSX typescript types

--- a/pkg/core/tsconfig.json
+++ b/pkg/core/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "commonjs",
+    "jsx": "preserve",
     "declaration": true,
     "esModuleInterop": true,
     "outDir": "dist"
