--- a/pkg/core/tsconfig.json
+++ b/pkg/core/tsconfig.json
@@ -9,11 +9,5 @@
     "esModuleInterop": true,
     "outDir": "dist"
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["./src", "types"]
 }
