--- a/pkg/form/package.json
+++ b/pkg/form/package.json
@@ -2,18 +2,15 @@
   "name": "@pulsor/form",
   "version": "0.0.1-rc.1",
   "description": "Stateful form handling primitives for pulsor",
+  "author": "Alexandre Lotte <dev@alexlotte.ca>",
+  "license": "ISC",
   "module": "index.ts",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "dependencies": {
-    "lodash-es": "^4.17.21"
-  },
-  "devDependencies": {
-    "@types/lodash-es": "^4.17.5"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@pulsor/core": "0.0.1-rc.6"
+  }
 }
