Update form ts config

--- a/pkg/form/tsconfig.json
+++ b/pkg/form/tsconfig.json
@@ -1,5 +1,14 @@
 {
-  "extends": "../core/tsconfig.json",
+  "compilerOptions": {
+    "strict": true,
+    "target": "es6",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "module": "commonjs",
+    "jsx": "preserve",
+    "declaration": true,
+    "esModuleInterop": true,
+    "outDir": "dist"
+  },
   "include": [
     "index.ts",
     "pulsor-env.d.ts",
