--- a/pkg/form/package.json
+++ b/pkg/form/package.json
@@ -11,6 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@pulsor/core": "0.0.1-rc.6"
+    "@pulsor/core": "0.0.1-rc.7"
+  },
+  "devDependencies": {
+    "typescript": "^4.5.2"
   }
 }
