Update form pkg

--- a/pkg/form/tsconfig.json
+++ b/pkg/form/tsconfig.json
@@ -4,10 +4,10 @@
     "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "commonjs",
-    "jsx": "preserve",
     "declaration": true,
     "esModuleInterop": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "types": ["@pulsor/core"]
   },
   "include": [
     "index.ts",
