--- a/pkg/form/package.json
+++ b/pkg/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pulsor/form",
-  "version": "0.0.1-rc.1",
+  "version": "0.0.1-rc.2",
   "description": "Stateful form handling primitives for pulsor",
   "author": "Alexandre Lotte <dev@alexlotte.ca>",
   "license": "ISC",
@@ -8,10 +8,12 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "prepublish": "tsc",
+    "test": "echo \"No test specified\""
   },
   "dependencies": {
-    "@pulsor/core": "0.0.1-rc.7"
+    "@pulsor/core": "0.0.1-rc.11"
   },
   "devDependencies": {
     "typescript": "^4.5.2"
