--- a/pkg/form/tsconfig.json
+++ b/pkg/form/tsconfig.json
@@ -6,8 +6,7 @@
     "module": "commonjs",
     "declaration": true,
     "esModuleInterop": true,
-    "outDir": "dist",
-    "types": ["@pulsor/core"]
+    "outDir": "dist"
   },
   "include": [
     "index.ts",
