--- a/pkg/location/tsconfig.json
+++ b/pkg/location/tsconfig.json
@@ -1,7 +1,15 @@
 {
-  "extends": "../core/tsconfig.json",
+  "compilerOptions": {
+    "strict": true,
+    "target": "es6",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "module": "commonjs",
+    "declaration": true,
+    "esModuleInterop": true,
+    "outDir": "dist"
+  },
   "include": [
     "index.ts",
-    "pulsor.d.ts",
+    "pulsor-env.d.ts",
   ],
 }
