--- a/examples/kitchen-sink-ts/tsconfig.json
+++ b/examples/kitchen-sink-ts/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "paths": {
+      "/*": ["./*"]
+    },
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
