--- a/pkg/location/package.json
+++ b/pkg/location/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pulsor/location",
-  "version": "0.0.1-rc.1",
+  "version": "0.0.1-rc.2",
   "description": "Routing utilities for pulsor",
   "author": "Alexandre Lotte <dev@alexlotte.ca>",
   "license": "ISC",
@@ -13,10 +13,13 @@
     "test": "echo \"No test specified\""
   },
   "dependencies": {
-    "@pulsor/core": "0.0.1-rc.11",
     "path-to-regexp": "^6.2.0"
   },
+  "peerDependencies": {
+    "@pulsor/core": "*"
+  },
   "devDependencies": {
+    "@pulsor/core": "0.0.1-rc.18",
     "typescript": "^4.5.2"
   }
 }
