Various changes (remove fragments, type => tag, run => effect

--- a/pkg/core/package.json
+++ b/pkg/core/package.json
@@ -4,7 +4,9 @@
   "description": "Virtual DOM unleashed",
   "author": "Alexandre Lotte <dev@alexlotte.ca>",
   "license": "ISC",
-  "keywords": ["virtual-dom"],
+  "keywords": [
+    "virtual-dom"
+  ],
   "devDependencies": {
     "typescript": "^4.5.2"
   },
