--- a/pkg/html/package.json
+++ b/pkg/html/package.json
@@ -4,7 +4,6 @@
   "description": "HTML / VNode convertion utilities for pulsor",
   "author": "Alexandre Lotte <dev@alexlotte.ca>",
   "license": "ISC",
-  "module": "index.ts",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -16,6 +15,7 @@
     "@pulsor/core": "*"
   },
   "devDependencies": {
-    "@pulsor/core": "0.0.1-rc.18"
+    "@pulsor/core": "0.0.1-rc.18",
+    "typescript": "^4.5.2"
   }
 }
