--- a/pkg/form/package.json
+++ b/pkg/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pulsor/form",
-  "version": "0.0.1-rc.4",
+  "version": "0.0.2-rc.2",
   "description": "Stateful form handling primitives for pulsor",
   "author": "Alexandre Lotte <dev@alexlotte.ca>",
   "license": "ISC",
@@ -12,11 +12,10 @@
     "prepublish": "tsc",
     "test": "echo \"No test specified\""
   },
-  "peerDependencies": {
-    "@pulsor/core": "*"
+  "dependencies": {
+    "@pulsor/core": "0.0.2-rc.2"
   },
   "devDependencies": {
-    "@pulsor/core": "0.0.1-rc.18",
     "typescript": "^4.5.2"
   }
 }
