--- a/pkg/html/package.json
+++ b/pkg/html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pulsor/html",
-  "version": "0.0.1-rc.1",
+  "version": "0.0.2-rc.3",
   "description": "HTML / VNode convertion utilities for pulsor",
   "author": "Alexandre Lotte <dev@alexlotte.ca>",
   "license": "ISC",
@@ -11,11 +11,10 @@
     "prepublish": "tsc",
     "test": "echo \"No test specified\""
   },
-  "peerDependencies": {
-    "@pulsor/core": "*"
+  "dependencies": {
+    "@pulsor/core": "0.0.2-rc.2"
   },
   "devDependencies": {
-    "@pulsor/core": "0.0.1-rc.18",
     "typescript": "^4.5.2"
   }
 }
