--- a/pkg/location/package.json
+++ b/pkg/location/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pulsor/location",
-  "version": "0.0.1-rc.2",
+  "version": "0.0.2-rc.1",
   "description": "Routing utilities for pulsor",
   "author": "Alexandre Lotte <dev@alexlotte.ca>",
   "license": "ISC",
@@ -12,13 +12,11 @@
     "test": "echo \"No test specified\""
   },
   "dependencies": {
+    "@pulsor/core": "0.0.2-rc.2",
+    "@pulsor/html": "^0.0.2-rc.3",
     "path-to-regexp": "^6.2.0"
   },
-  "peerDependencies": {
-    "@pulsor/core": "*"
-  },
   "devDependencies": {
-    "@pulsor/core": "0.0.1-rc.18",
     "typescript": "^4.5.2"
   }
 }
