--- a/pkg/cli/package.json
+++ b/pkg/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pulsor/cli",
-  "version": "0.0.2-rc.1",
+  "version": "0.0.2-rc.3",
   "description": "Vite-based development environment for building pulsor apps.",
   "author": "Alexandre Lotte <dev@alexlotte.ca>",
   "license": "ISC",
@@ -13,15 +13,15 @@
   "bin": {
     "pulsor": "cli.js"
   },
-  "peerDependencies": {
-    "@pulsor/core": "*"
-  },
-  "devDependencies": {
-    "@pulsor/core": "0.0.1-rc.18",
-    "@types/connect": "^3.4.35",
+  "dependencies": {
+    "@pulsor/core": "0.0.2-rc.2",
+    "@pulsor/html": "0.0.2-rc.3",
     "cac": "^6.7.12",
     "connect": "^3.7.0",
     "sirv": "^2.0.2",
     "vite": "^2.7.13"
+  },
+  "devDependencies": {
+    "@types/connect": "^3.4.35"
   }
 }
