--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@pulsor/cli": "^0.0.2-rc.3",
-    "@types/node": "^17.0.18"
+    "@types/node": "^17.0.18",
+    "vite-plugin-markdown": "^2.0.2"
   }
 }
